# LangGraph-Learning

docs/: deep-dive-langgraph-react-state-machine.md
react-agent-from-scratch/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
react-agent-from-scratch/scripts/: verify.sh
react-agent-from-scratch/src/react_agent/: __init__.py  __main__.py  config.py  graph.py  nodes.py  state.py  tools.py
react-agent-from-scratch/tests/: conftest.py  test_config.py  test_graph_construction.py  test_react_loop.py  test_state.py  test_tools.py
